# metanalyisis

./: firebase_config.json  metanalysis_service_account_keys.json  pyproject.toml
project/: app.py  create_table.py
project/api/routes/: api.py
project/api/routes/endpoint/: users.py
project/core/: configs.py  database.py  deps.py
project/models/: __all_models.py  movie_model.py  reviews_model.py  rule_model.py  user_rule_model.py  users_model.py
project/schemas/: movie_schema.py  reviews_schema.py  users_schema.py
